kubernetes/vault/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
spec:
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    app: vault
